  this is was unique example of a thread-unsafe-by-design method.


OTHER CHANGES
=============

2.4.1
-----

All:

- fixed wxLANGUAGE_CHINESE_TAIWAN to use zh_TW catalogs
- added missing wx/quantize.h to install
- improved wxScrolledWindow/sizer interaction
- fixed assert (and crash in debug) in wxFileConfigGroup::DeleteSubgroupByName

Unix (GUI):

- fixed the "close" button of dialogs under KDE 3.1

wxBase

- compilation with wxUSE_ODBC=1 fixed (dbkeyg.h file was missing in the archive)
- bug in wxDateTime with timezones on systems with tm_gmtoff in struct tm fixed
- fixed bug in wxArray::Shrink() (Seth Manley)

wxGTK:

- added wxEVT_MENU_OPEN event generation
- fixed bug in generic file selector causing incomplete file extensions to
  be appended to filenames with no extension
- added SetSelection implementation for GTK+ 2

wxMSW:

- no longer take ampersand into account in wxStaticText::GetBestSize
- set orientation for scrollbar events
- fix for explicit keyword detection (VC++)
- fix for sending event from wxCheckListBox::Check()
- wxCaret::SetSize correction for showing caret
- fix for wxTreeCtrl label editing in wxTR_MULTIPLE mode

wxMotif:

- don't use stipples in DoDrawText

2.4.0
-----

wxMSW:

- fixed loss of client data in wxChoice::SetString()

wxGTK:

- fixed wxMenu::Remove (John Skiff and Benjamin Williams)

All:

- Improved contrib/utils/convertrc parsing (David J. Cooke)
- Fixed handling of URLs and filenames in wxFileSystem
- Implemented alignment for wxGrid bool editor and renderer

2.3.4
-----

All:

- added (partial) Indonesian translations (Bambang Purnomosidi D. P.)
- added wxSizer::Show()/Hide() (Carl Godkin)
- fixed bugs in wxDateTime::SetToWeekDay()/GetWeek()

Unix (Base/GUI):

- minor OpenBSD compilation/linking fixes, now builds OOB under OpenBSD 3.1
- don't include -I/usr/include nor -I/usr/local/include in wx-config output
- shared library symbols are now versioned on platforms that support it (Linux)

wxGTK:
